--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,8 +15,8 @@
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">Will be coming soon</a></h2>
-            <p>.</p>
+            <h2><a href="">My second post</a></h2>
+            <p>Will be coming soon.</p>
         </div>
     </body>
 </html>
